--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anna Stepanenko</title>
-    <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,14 +16,11 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <script
-      src="https://kit.fontawesome.com/1ea4b633ed.js"
-      crossorigin="anonymous"
-    ></script>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <div class="menu-btn">
+      <div>
         <svg viewBox="0 0 800 600" class="menu-icon">
           <path
             d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
@@ -40,16 +36,13 @@
           />
         </svg>
       </div>
-      <div class="navigation">
-        <nav>
-          <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Услуги</a></li>
-            <li><a href="#">Контакты</a></li>
-          </ul>
-        </nav>
-      </div>
+      <a href="#" class="logo">Anna Stepanenko</a>
+      <nav class="navigation">
+        <a class="nav__link" href="index.html">HOME</a>
+        <a class="nav__link" href="about.html">ABOUT ME</a>
+        <a class="nav__link" href="projects.html">PROJECTS</a>
+        <a class="nav__link" href="about.html#contacts">CONTACTS</a>
+      </nav>
     </header>
 
     <script src="script.js"></script>
