--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
   </head>
   <body>
     <header>
-        <svg viewBox="0 0 800 600" class="menu-icon">
-          <path
-            d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
-            class="top_bar"
-          />
+      <svg viewBox="0 0 800 600" class="menu-icon">
+        <path
+          d="M300,220 C300,220 520,220 540,220 C740,220 640,540 520,420 C440,340 300,200 300,200"
+          class="top_bar"
+        />
 
-          <path d="M300,320 L540,320" class="middle_bar" />
+        <path d="M300,320 L540,320" class="middle_bar" />
 
-          <path
-            d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
-            class="bottom_bar"
-            transform="translate(480, 320) scale(1, -1) translate(-480, -318)"
-          />
-        </svg>
-      </div>
-      <a href="#" class="logo">Anna Stepanenko</a>
+        <path
+          d="M300,210 C300,210 520,210 540,210 C740,210 640,530 520,410 C440,330 300,190 300,190"
+          class="bottom_bar"
+          transform="translate(480, 320) scale(1, -1) translate(-480, -318)"
+        />
+      </svg>
+      <a href="index.html" class="logo">Anna Stepanenko</a>
       <nav class="navigation">
         <a class="nav__link" href="index.html">HOME</a>
         <a class="nav__link" href="about.html">ABOUT ME</a>
@@ -44,7 +43,12 @@
       </nav>
     </header>
     <div class="sidebar">
-        <a href="#" class="social">
+      <a
+        href="mailto:iamann1311@gmail.com"
+        title="mail"
+        target="_blank"
+        class="social"
+      >
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
           <title />
           <g data-name="mail email e-mail letter" id="mail_email_e-mail_letter">
@@ -56,9 +60,13 @@
             />
           </g>
         </svg>
-        </a>
-      
-      <a href="#" class="social">
+      </a>
+      <a
+        href="https://github.com/annayemsen"
+        title="github"
+        target="_blank"
+        class="social"
+      >
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
           <title />
           <g
@@ -71,10 +79,27 @@
           </g>
         </svg>
       </a>
-      <a href="#" class="social">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title/><g data-name="facebook fb face book" id="facebook_fb_face_book"><path d="M24,3H8A5,5,0,0,0,3,8V24a5,5,0,0,0,5,5h8a1,1,0,0,0,1-1V20a1,1,0,0,0-1-1H15V17h1a1,1,0,0,0,1-1V12.5A2.5,2.5,0,0,1,19.5,10H22v2H21a2,2,0,0,0-2,2v2a1,1,0,0,0,1,1h1.72l-.5,2H20a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V21h1a1,1,0,0,0,1-.76l1-4a1,1,0,0,0-.18-.86A1,1,0,0,0,23,15H21V14h2a1,1,0,0,0,1-1V9a1,1,0,0,0-1-1H19.5A4.51,4.51,0,0,0,15,12.5V15H14a1,1,0,0,0-1,1v4a1,1,0,0,0,1,1h1v6H8a3,3,0,0,1-3-3V8A3,3,0,0,1,8,5H24a3,3,0,0,1,3,3V24a3,3,0,0,1-3,3H20a1,1,0,0,0,0,2h4a5,5,0,0,0,5-5V8A5,5,0,0,0,24,3Z"/></g></svg>
+      <a
+        href="https://www.facebook.com/profile.php?id=100037595994381"
+        title="facebook"
+        target="_blank"
+        class="social"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+          <title />
+          <g data-name="facebook fb face book" id="facebook_fb_face_book">
+            <path
+              d="M24,3H8A5,5,0,0,0,3,8V24a5,5,0,0,0,5,5h8a1,1,0,0,0,1-1V20a1,1,0,0,0-1-1H15V17h1a1,1,0,0,0,1-1V12.5A2.5,2.5,0,0,1,19.5,10H22v2H21a2,2,0,0,0-2,2v2a1,1,0,0,0,1,1h1.72l-.5,2H20a1,1,0,0,0-1,1v4a1,1,0,0,0,2,0V21h1a1,1,0,0,0,1-.76l1-4a1,1,0,0,0-.18-.86A1,1,0,0,0,23,15H21V14h2a1,1,0,0,0,1-1V9a1,1,0,0,0-1-1H19.5A4.51,4.51,0,0,0,15,12.5V15H14a1,1,0,0,0-1,1v4a1,1,0,0,0,1,1h1v6H8a3,3,0,0,1-3-3V8A3,3,0,0,1,8,5H24a3,3,0,0,1,3,3V24a3,3,0,0,1-3,3H20a1,1,0,0,0,0,2h4a5,5,0,0,0,5-5V8A5,5,0,0,0,24,3Z"
+            />
+          </g>
+        </svg>
       </a>
-      <a href="#" class="social">
+      <a
+        href="https://t.me/annayemsen"
+        title="telegram"
+        target="_blank"
+        class="social"
+      >
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
           <title />
           <g
@@ -87,7 +112,12 @@
           </g>
         </svg>
       </a>
-      <a href="#" class="social">
+      <a
+        href="https://www.instagram.com/annayemsen/"
+        title="instagram"
+        target="_blank"
+        class="social"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           data-name="Layer 1"
@@ -117,6 +147,81 @@
         </svg>
       </a>
     </div>
+    <main>
+      <div class="home-description text-center">
+        <h2>Hello!</h2>
+        <h1>I'm Anna Stepanenko</h1>
+        <h3 class="my-4">Front-end developer based in Kyiv</h3>
+        <a href="about.html" class="about-button"> About me </a>
+      </div>
+      <div class="projects-container">
+        <h4 class="mb-4">Latest projects</h4>
+        <div class="row g-0">
+          <div class="col img-container">
+            <img class="img-fluid" src="img/yogurt.png" />
+          </div>
+          <div class="col p-4 about-project">
+            <div class="project-number mb-3">01</div>
+            <h5 class="project-name mb-3">Yogurt app</h5>
+            <p class="project-description mb-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
+              eaque totam. Fugiat itaque, consectetur ad dolores cumque
+              aspernatur voluptatibus tenetur ea minus qui, nesciunt inventore
+              harum corporis natus deleniti.
+            </p>
+            <a class="project-button" href="#">DETAILS</a>
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col p-4 about-project">
+            <div class="project-number mb-3">02</div>
+            <h5 class="project-name mb-3">Weather app</h5>
+            <p class="project-description mb-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              atque praesentium officiis nisi quae qui exercitationem quia
+              repellendus harum. Incidunt voluptate repellat, dolorum quas est
+              voluptatem rem voluptas reprehenderit odio!
+            </p>
+            <a class="project-button" href="#">DETAILS</a>
+          </div>
+          <div class="col img-container">
+            <img class="img-fluid" src="img/weather.png" alt="weather app" />
+          </div>
+        </div>
+        <div class="row g-0">
+          <div class="col img-container">
+            <img
+              class="img-fluid"
+              src="img/dictionary.png"
+              alt="dictionary app"
+            />
+          </div>
+          <div class="col p-4 about-project">
+            <div class="project-number mb-3">03</div>
+            <h5 class="project-name mb-3">Dictionary app</h5>
+            <p class="project-description mb-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              atque praesentium officiis nisi quae qui exercitationem quia
+              repellendus harum. Incidunt voluptate repellat, dolorum quas est
+              voluptatem rem voluptas reprehenderit odio!
+            </p>
+            <a class="project-button" href="#">DETAILS</a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer">
+        <div class="footer-content">
+          <div>Let's work together!</div>
+          <div>Anna Stepanenko</div>
+        </div>
+        <div class="footer-links">
+          <a href="mailto:iamann1311@gmail.com">iamann1311@gmail.com</a>
+          <a class="align-bottom" href="tel:+380678828221">+380678828221</a>
+        </div>
+      </div>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
