about page responsive

--- a/about.html
+++ b/about.html
@@ -147,11 +147,14 @@
         </svg>
       </a>
     </div>
-    <main>
+    <main class="mb-3 about__main-content">
       <div class="row">
         <div class="col about-me-description">
           <h2>Hello!</h2>
-          <h1 class="about__name">I'm Anna Stepanenko</h1>
+          <h1 class="about__name">
+            I'm Anna <br />
+            Stepanenko
+          </h1>
           <h3>Frontend developer based in Kyiv</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam
@@ -165,10 +168,10 @@
           </p>
           <a href="projects.html" class="about-button"> See my projects </a>
         </div>
-        <div class="col picture-bg">
-          <div class="picture-bg-light">
+        <div class="col-auto">
+          <div>
             <img
-              src="img/profile-picture1.png"
+              src="img/profile-picture.png"
               alt="My photo"
               class="img-fluid profile-picture"
             />
