--- a/contacts.html
+++ b/contacts.html
@@ -39,10 +39,10 @@
         <a class="nav__link" href="index.html">HOME</a>
         <a class="nav__link" href="about.html">ABOUT ME</a>
         <a class="nav__link" href="projects.html">PROJECTS</a>
-        <a class="nav__link" href="contacts.html">CONTACTS</a>
+        <a class="nav__link" href="about.html#contacts">CONTACTS</a>
       </nav>
     </header>
-    <div class="sidebar">
+    <div class="sidebar sidebar__contacts">
       <a
         href="mailto:iamann1311@gmail.com"
         title="mail"
@@ -148,67 +148,17 @@
       </a>
     </div>
     <main>
-      <div class="home-description text-center">
-        <h2>Hello!</h2>
-        <h1>I'm Anna Stepanenko</h1>
-        <h3 class="my-4">Front-end developer based in Kyiv</h3>
-        <a href="about.html" class="about-button"> About me </a>
-      </div>
-      <div class="projects-container">
-        <h4 class="mb-4">Latest projects</h4>
-        <div class="row g-0">
-          <div class="col img-container">
-            <img class="img-fluid" src="img/yogurt.png" />
-          </div>
-          <div class="col p-4 about-project">
-            <div class="project-number mb-3">01</div>
-            <h5 class="project-name mb-3">Yogurt app</h5>
-            <p class="project-description mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo natus
-              eaque totam. Fugiat itaque, consectetur ad dolores cumque
-              aspernatur voluptatibus tenetur ea minus qui, nesciunt inventore
-              harum corporis natus deleniti.
-            </p>
-            <a class="project-button" href="#">DETAILS</a>
-          </div>
-        </div>
-        <div class="row g-0">
-          <div class="col p-4 about-project">
-            <div class="project-number mb-3">02</div>
-            <h5 class="project-name mb-3">Weather app</h5>
-            <p class="project-description mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-              atque praesentium officiis nisi quae qui exercitationem quia
-              repellendus harum. Incidunt voluptate repellat, dolorum quas est
-              voluptatem rem voluptas reprehenderit odio!
-            </p>
-            <a class="project-button" href="#">DETAILS</a>
-          </div>
-          <div class="col img-container">
-            <img class="img-fluid" src="img/weather.png" alt="weather app" />
-          </div>
-        </div>
-        <div class="row g-0">
-          <div class="col img-container">
-            <img
-              class="img-fluid"
-              src="img/dictionary.png"
-              alt="dictionary app"
-            />
-          </div>
-          <div class="col p-4 about-project">
-            <div class="project-number mb-3">03</div>
-            <h5 class="project-name mb-3">Dictionary app</h5>
-            <p class="project-description mb-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-              atque praesentium officiis nisi quae qui exercitationem quia
-              repellendus harum. Incidunt voluptate repellat, dolorum quas est
-              voluptatem rem voluptas reprehenderit odio!
-            </p>
-            <a class="project-button" href="#">DETAILS</a>
-          </div>
-        </div>
-      </div>
+      <h1 class="h__contacts">Let's get in touch!</h1>
+      <h3 class="mt-3">E-mail</h3>
+      <a href="mailto:iamann1311@gmail.com" target="_blank"
+        >iamann1311@gmail.com</a
+      >
+      <h3 class="mt-3">Telegram</h3>
+      <a href="https://t.me/annayemsen" target="_blank">@annayemsen</a>
+      <h3 class="mt-3">Instagram</h3>
+      <a href="https://www.instagram.com/annayemsen/" target="_blank"
+        >@annayemsen</a
+      >
     </main>
     <footer>
       <div class="footer">
