--- a/contacts.html
+++ b/contacts.html
@@ -17,6 +17,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <meta
+      name="description"
+      content="I'm waiting for your message, let's work together!"
+    />
   </head>
   <body>
     <header>
@@ -36,10 +40,10 @@
       </svg>
       <a href="index.html" class="logo">Anna Stepanenko</a>
       <nav class="navigation">
-        <a class="nav__link" href="index.html">HOME</a>
-        <a class="nav__link" href="about.html">ABOUT ME</a>
-        <a class="nav__link" href="projects.html">PROJECTS</a>
-        <a class="nav__link" href="about.html#contacts">CONTACTS</a>
+        <a class="nav__link" href="index.html" title="home">HOME</a>
+        <a class="nav__link" href="about.html" title="about me">ABOUT ME</a>
+        <a class="nav__link" href="projects.html" title="projects">PROJECTS</a>
+        <a class="nav__link" href="contacts.html" title="contacts">CONTACTS</a>
       </nav>
     </header>
     <div class="sidebar sidebar__contacts">
@@ -167,8 +171,12 @@
           <div>Anna Stepanenko</div>
         </div>
         <div class="footer-links">
-          <a href="mailto:iamann1311@gmail.com">iamann1311@gmail.com</a>
-          <a class="align-bottom" href="tel:+380678828221">+380678828221</a>
+          <a href="mailto:iamann1311@gmail.com" title="email"
+            >iamann1311@gmail.com</a
+          >
+          <a class="align-bottom" href="tel:+380678828221" title="phone"
+            >+380678828221</a
+          >
         </div>
       </div>
     </footer>
