--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
       </svg>
       <a href="index.html" class="logo">Anna Stepanenko</a>
       <nav class="navigation">
-        <a class="nav__link" href="index.html">HOME</a>
-        <a class="nav__link" href="about.html">ABOUT ME</a>
-        <a class="nav__link" href="projects.html">PROJECTS</a>
-        <a class="nav__link" href="about.html#contacts">CONTACTS</a>
+        <a class="nav__link" href="index.html" title="home">HOME</a>
+        <a class="nav__link" href="about.html" title="about me">ABOUT ME</a>
+        <a class="nav__link" href="projects.html" title="projects">PROJECTS</a>
+        <a class="nav__link" href="contacts.html" title="contacts">CONTACTS</a>
       </nav>
     </header>
     <div class="sidebar">
@@ -166,7 +166,9 @@
             aspernatur illum repellat, soluta maiores ab asperiores obcaecati
             doloremque.
           </p>
-          <a href="projects.html" class="about-button"> See my projects </a>
+          <a href="projects.html" class="about-button" title="see my projects">
+            See my projects
+          </a>
         </div>
         <div class="col-auto">
           <div>
@@ -186,8 +188,12 @@
           <div>Anna Stepanenko</div>
         </div>
         <div class="footer-links">
-          <a href="mailto:iamann1311@gmail.com">iamann1311@gmail.com</a>
-          <a class="align-bottom" href="tel:+380678828221">+380678828221</a>
+          <a href="mailto:iamann1311@gmail.com" title="email"
+            >iamann1311@gmail.com</a
+          >
+          <a class="align-bottom" href="tel:+380678828221" title="phone number"
+            >+380678828221</a
+          >
         </div>
       </div>
     </footer>
