added link to repository

--- a/projects.html
+++ b/projects.html
@@ -176,6 +176,12 @@
           <div>Let's work together!</div>
           <div>Anna Stepanenko</div>
         </div>
+        <p class="text-center">
+          Open-sourced on
+          <a target="_blank" href="https://github.com/annayemsen/portfolio"
+            >GitHub</a
+          >
+        </p>
         <div class="footer-links">
           <a href="mailto:iamann1311@gmail.com" title="email"
             >iamann1311@gmail.com</a
